# tictactoe-course

./: CMakeLists.txt
src/player/: my_player.cpp
tests/: test_stats_vs_baseline.cpp
